--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,24 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         DBIx-Simple-OO
-version:      0.01
-version_from: lib/DBIx/Simple/OO.pm
-installdirs:  site
+--- #YAML:1.0
+name:               DBIx-Simple-OO
+version:            0.02
+abstract:           Retrieve database rows as objects
+author:
+    - Jos Boumans <kane[at]cpan.org>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    DBIx::Simple:                  0
-    Object::Accessor:              0
-    Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.25
+    DBIx::Simple:      0
+    Object::Accessor:  0
+    Test::More:        0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
