--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,25 @@
---- #YAML:1.0
-name:               DBIx-Simple-OO
-version:            0.02
-abstract:           Retrieve database rows as objects
+---
+abstract: 'Retrieve database rows as objects'
 author:
-    - Jos Boumans <kane[at]cpan.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Jos Boumans <kane[at]cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    DBIx::Simple:      0
-    Object::Accessor:  0
-    Test::More:        0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+  ExtUtils::MakeMaker: 0
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 6.74, CPAN::Meta::Converter version 2.132140'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: DBIx-Simple-OO
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  DBI: 1.624
+  DBIx::Simple: 0
+  Object::Accessor: 0
+  Test::More: 0
+resources:
+  repository: git://github.com/jib/dbix-simple-oo.git
+version: 0.02
